Save the code from the machine that crashed.!!